<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.login.LoginActivity">

        <ImageView
            android:id="@+id/icon_iv"
            android:layout_marginTop="@dimen/_80sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_launcher_foreground"
            android:background="@drawable/splash_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_marginTop="@dimen/_15sdp"
            android:id="@+id/user_name_ET"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon_iv"
            android:hint="@string/user_name"
            android:paddingLeft="@dimen/_80sdp"
            android:paddingRight="@dimen/_80sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/password_ET"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_name_ET"
            android:hint="@string/password"
            android:paddingLeft="@dimen/_80sdp"
            android:paddingRight="@dimen/_80sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/login_btn"
            android:background="@drawable/btn_bg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_ET"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/color_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/_45sdp"
            android:paddingLeft="@dimen/_45sdp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_10sdp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
