<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_margin="@dimen/_8sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/id_value_tv"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:layout_marginStart="@dimen/_7sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_15sdp" />

                <LinearLayout
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:id="@+id/title_top_line"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/id_value_tv"
                    android:layout_width="match_parent"
                    android:background="#B8B7B7"
                    android:layout_height="1dp"
                    android:orientation="vertical" />
                <TextView
                    android:id="@+id/title_value_tv"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:layout_marginStart="@dimen/_7sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_top_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_me"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_15sdp"/>

                <LinearLayout
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:id="@+id/survey_date_top_line"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_value_tv"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#B8B7B7"
                    android:orientation="vertical" />

                <TextView
                    android:id="@+id/survey_date_value_tv"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:layout_marginStart="@dimen/_7sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/survey_date_top_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_21_08_2020"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_15sdp"/>

                <LinearLayout
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:id="@+id/survey_area_top_line"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/survey_date_value_tv"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#B8B7B7"
                    android:orientation="vertical" />

                <TextView
                    android:paddingRight="@dimen/_5sdp"
                    android:id="@+id/survey_area_value_tv"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:layout_marginStart="@dimen/_7sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/survey_area_top_line"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dhaka_bangladesh"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    tools:ignore="RtlSymmetry" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
